--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 </head>
 <body>
    <header class="header main-container">
-       <div class="img-container"><img src="imgs/cv-profile-ph2.jpg" alt="Imagen de perfil"></div>
-       <div class="header-text">
-           <h1 class="nombre">Emilio Differding</h1>
-           <h3 class="puesto">WebDev Jr.</h3>
-           <div class="info">
+       <div class="header-img-container"><img src="imgs/cv-profile-ph2.jpg" alt="Imagen de perfil">
+       </div>
+       <div class="header-text-container">
+            <div>
+                <h1 class="nombre">Emilio Differding</h1>
+                <h3 class="puesto">WebDev Jr.</h3>
+            </div> <!-- este div es solo para mantene rjuntos a nombre y puesto, y el display:flex no lo rompa-->
+            <div class="info">
                 <p><span><i class="fas fa-phone"></i></span> (345)4223344</p>
                 <p><span><i class="far fa-envelope"></i></span> <a href="mailto:emiliodiffer@gmail.com" class="menu-link">emiliodiffer@gmail.com</a> </p>
                 <p><span><i class="fas fa-map-marked"></i></span> Calle Falsa 123 - Concordia E.R. CP.:3200</p>
@@ -44,7 +47,7 @@
                 <li class="menu-item"><a class="menu-link fab fa-google-plus-g" href="#"></a></li>
             </ul>
         </nav>
-    </div> <!--Fin de NAV-->
+    </div> <!--Fin de NAV Barra flotante-->
     
         <section class="section main-container" id="perfil">
             <header class="section__header">
