agrego un parrafo a perfil

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <p class="section__paragraph">
                 Me gusta resolver problemas programando para hacer la vida mas fácil y divertida. Actualmente lo Hago en UNER. programando sistemas electrónicos.
             </p>
+            <p class="section__paragraph">
+                Por otro lado el <strong>Desarrollo Web</strong> me permite combinar la programación con mi segunda pasión que es el Diseño.
+            </p>
         </section>
     
         <section class="section main-container" id="experiencia">
